@@ -1,3 +1,4 @@
+- add crypto slideshow support
 v0.1.6 (2017-12-17)
 - fix accessing settings when no user defined
 - fix default username and password (None -> '')
